objects/LBI__ErrorLog__c.object
<CustomObject>
    <description>Stores all the exceptions thrown by code</description>
    <fields>
        <fullName>LBI__ErrorCodeResolution__c</fullName>
        <label>Error Code Resolution</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__ErrorCodeTitle__c</fullName>
        <label>Error Code Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ErrorCode__c</fullName>
        <description>Using a text instead of a number here to avoid commas being injected in output.</description>
        <label>Error Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ErrorType__c</fullName>
        <description>Type of exception, such as DmlException, ListException, MathException, and so on.</description>
        <inlineHelpText>Type of exception, such as DmlException, ListException, MathException, and so on.</inlineHelpText>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__HasRecordId__c</fullName>
        <formula>IF (ISBLANK(LBI__StageRecordID__c),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasRecordId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeApplicationRegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Application/Region</label>
        <referenceTo>LBI__LatticeApplicationRegion__c</referenceTo>
        <relationshipLabel>Lattice Error Logs</relationshipLabel>
        <relationshipName>Lattice_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeSyncBatchStep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Sync Batch Step</label>
        <referenceTo>LBI__LatticeSyncBatchStep__c</referenceTo>
        <relationshipLabel>Lattice Error Logs</relationshipLabel>
        <relationshipName>Lattice_Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__LineNumber__c</fullName>
        <description>Line Number from where the exception was thrown.</description>
        <inlineHelpText>Line Number from where the exception was thrown.</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Message__c</fullName>
        <description>Error Message that displays for the user.</description>
        <inlineHelpText>Error Message that displays for the user.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification</label>
        <referenceTo>LBI__Notification__c</referenceTo>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__StackTrace__c</fullName>
        <description>Detailed stack trace showing additional error information</description>
        <inlineHelpText>Detailed stack trace showing additional error information</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__StageRecordID__c</fullName>
        <label>Stage Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__StageRecord__c</fullName>
        <formula>IF (
 ISBLANK(LBI__StageRecordID__c),
 $Label.lbi__err_nostagerecordinvolved, 
 HYPERLINK(&quot;/&quot; &amp;  LBI__StageRecordID__c , $Label.lbi__err_stagerecord, &quot;_blank&quot;)
)</formula>
        <label>Stage Record</label>
        <type>Text</type>
    </fields>
    <label>Lattice Error Log</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__ErrorType__c</columns>
        <columns>LBI__LineNumber__c</columns>
        <columns>LBI__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LBI__NotRulesProcessorEngineException</fullName>
        <columns>NAME</columns>
        <columns>LBI__ErrorType__c</columns>
        <columns>LBI__LineNumber__c</columns>
        <columns>LBI__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__ErrorType__c</field>
            <operation>notEqual</operation>
            <value>RulesProcessorEngineException</value>
        </filters>
        <label>Not RulesProcessorEngineException</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Error Logs</pluralLabel>
    <recordTypes>
        <fullName>LBI__AccountExtensionError</fullName>
        <active>true</active>
        <label>Account Extension Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>LBI__IntegrationError</fullName>
        <active>true</active>
        <label>Integration Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>LBI__OtherError</fullName>
        <active>true</active>
        <label>Other Error</label>
    </recordTypes>
    <recordTypes>
        <fullName>LBI__ProcessingError</fullName>
        <active>true</active>
        <label>Processing Error</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>